assets/theme/css/style.css
/*!
 * Mobirise v4 theme (https://mobirise.com/)
 * Copyright 2017 Mobirise
 * Modified by @LuisMiguelSS (github.com/luismiguelss) 2019
 */

/*
		Luis Miguel Soto Sánchez's section
 */
:root {
  --dark-grey-own: #282828;
  --color-space: #112938;
  --color-sand: #e0ebcf;
}

/* Colors */
.bg-space {
  background-color: var(--color-space);
}
.bg-sand {
  background-color: var(--color-sand);
}
.blend {
  color: var(--color-sand);
  mix-blend-mode: difference;
}

/* Text */
.text-sand {
  color: var(--color-sand) !important;
}

.text-space {
  color: var(--color-space) !important;
}

/* Small separation for fontawesome icons */
html,
body {
  height: 100%;
  scroll-behavior: smooth;
}

/* Sections */
.section-title {
  font-style: normal;
  line-height: 1.2;
}
section#projects_section {
  background-color: var(--color-sand);
}
section#references {
  background-color: var(--color-sand);
}

#welcomeSplash {
  color: white;
  background-image: url("../../../assets/images/background.png");
}

section#welcomeSplash h1 {
  text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
}

/* Nav */
#navigationMenu a:not(.btn) {
  color: #fafafa;
  opacity: .7;
  transition: all .2s;
}
#navigationMenu a:hover,
#navigationMenu a:active {
  opacity: 1;
}

/* Welcome Section */
#main-slider a {
  color: #fff;
}
@media (max-width: 767px) {
  #main-slider {
    display: none;
  }
}

#welcomeAboutTo {
  background: transparent;
  color: #fff;
  border-top: 3px solid #fff;
  border-bottom: 3px solid #fff;
}

/* Testimonials Section */
#quote-carousel {
  padding: 0 10px 30px 10px;
  margin-top: 30px;
}

#quote-carousel .carousel-control {
  background: none;
  color: #CACACA;
  font-size: 2.3em;
  text-shadow: none;
  margin-top: 30px;
}
.carousel-item blockquote {
  border-left: none;
}
.carousel-item blockquote div {
  margin: 0 auto;
}

.carousel-item blockquote p:before {
  content: "\f10d";
  font-family: 'Fontawesome';
  float: left;
  margin-right: 10px;
}
.carousel-item blockquote p:after {
  content: "\f10e";
  font-family: 'Fontawesome';
  float: right;
  margin-left: 10px;
}
.carousel-control-prev-icon,
.carousel-control-next-icon {
  filter: invert(100%);
}
.carousel-item img {
  width: 65px;
}

/* Font Awesome Icons (Nav + Others) */
#cvDownloadButton span,
form i.fas {
  font-size: 16px;
  padding-right: 5px;
}

.space-background-flipped {
  background-image: url("../../../assets/images/background-flipped.png");
}

/* Footer */

section,
.container,
.container-fluid {
  position: relative;
  word-wrap: break-word;
}

a {
  font-style: normal;
  font-weight: 400;
  cursor: pointer;
}

a,
a:hover {
  text-decoration: none;
}

body {
  color: #232323;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
.display-1,
.display-2,
.display-3,
.display-4 {
  line-height: 1;
  word-break: break-word;
  word-wrap: break-word;
}

b,
strong {
  font-weight: bold;
}

body {
  position: relative;
  color: #767676;
}

section {
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Base colors */
.bg-white {
  background-color: #ffffff;
}

/* 3D Buttons */
.clicky {
	margin-top: 0;
	margin-bottom: 10px;
	margin-left: auto;
	margin-right: auto;
	box-shadow: 0 10px 0 0 #212529;

  display: block;
  background: #a47;
  color: #eee;
  padding: 1em 2em;
  border: 0;
  cursor: pointer;
  font-size: 1.2em;
  opacity: 0.9;
  border-radius: 10px;
}

.clicky:active {
  box-shadow: none;
  margin-top: 10px;
  margin-bottom: 0;
}

.clicky:hover {
  opacity: 1;
}

.clicky:active,
.clicky:focus {
  outline: 0;
}

/*! Text-aligns */
.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

@media (max-width: 767px) {
  .align-left,
  .align-center,
  .align-right,
  .mbr-section-btn,
  .section-title {
    text-align: center;
  }
}

/* Media	*/
.media-content {
  -webkit-flex-basis: 100%;
  flex-basis: 100%;
}

.media-container-row {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: start;
  -ms-flex-align: start;
  align-items: start;
}

.media-container-column {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.media-container-column > * {
  width: 100%;
}

@media (min-width: 992px) {

  .pdfViewer > div,
  .pdfViewer > div > div,
  .pdfViewer > div > div > div,
  .pdfViewer > div > div > div > object {
    height: 100% !important;
  }

  .media-container-row {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

.mbr-figure img,
.mbr-figure iframe {
  display: block;
  width: 100%;
}

.card {
  background-color: var(--color-space) !important;
  color: white;
  border: none;
}

.card-box {
  background-color: var(--color-space) !important;
  width: 100%;
}

.card-img {
  padding: 1rem;
  max-height: 200px;
  flex-shrink: 0;
  -webkit-flex-shrink: 0;
  text-align: center;
}
.card-img img {
  object-fit: contain;
}

.media {
  max-width: 100%;
  margin: 0 auto;
}

.mbr-figure {
  -ms-flex-item-align: center;
  -ms-grid-row-align: center;
  -webkit-align-self: center;
  align-self: center;
}

.mbr-figure img,
.card-img img {
  width: 100%;
}

@media (max-width: 991px) {
  header > nav {
    background-color: var(--color-space);
  }
  .media-size-item {
    width: auto !important;
  }
  .media {
    width: auto;
  }
  .mbr-figure {
    width: 100% !important;
  }
}

/* Buttons */
.mbr-section-btn {
  margin-left: -0.25rem;
  margin-right: -0.25rem;
  font-size: 0;
}

nav .mbr-section-btn {
  margin-left: 0rem;
  margin-right: 0rem;
}

/* Btn icon margin */
.mbr-bold {
  font-weight: 700;
}

[type="submit"] {
  -webkit-appearance: none;
}

/* Full-screen */
.mbr-fullscreen .overlay {
  min-height: 100vh;
}

.mbr-fullscreen {
  display: flex;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  align-items: center;
  -webkit-align-items: center;
  min-height: 100vh;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

/*! Arrow Down */
.mbr-arrow {
  position: absolute;
  bottom: 45px;
  left: 50%;
  width: 50px;
  height: 50px;
  cursor: pointer;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
}

.menu .navbar-brand {
  display: -webkit-flex;
}

.menu .navbar-brand span {
  display: flex;
  display: -webkit-flex;
}

.menu .navbar-brand .navbar-caption-wrap {
  display: -webkit-flex;
}

@media (min-width: 768px) and (max-width: 1023px) {
  .menu .navbar-toggleable-sm .navbar-nav {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
  }
}

@media (max-width: 1023px) {
  .menu .navbar-collapse {
    max-height: 93.5vh;
  }
  .menu .navbar-collapse.show {
    overflow: auto;
  }
}

@media (min-width: 1024px) {
  .menu .navbar-nav.nav-dropdown {
    display: -webkit-flex;
  }
  .menu .navbar-toggleable-sm .navbar-collapse {
    display: -webkit-flex !important;
  }
  .menu .collapsed .navbar-collapse {
    max-height: 93.5vh;
  }
  .menu .collapsed .navbar-collapse.show {
    overflow: auto;
  }
}

@media (max-width: 767px) {
  .menu .navbar-collapse {
    max-height: 80vh;
  }
}

.navbar {
  display: -webkit-flex;
  -webkit-flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.navbar-collapse {
  -webkit-flex-basis: 100%;
  -webkit-flex-grow: 1;
  -webkit-align-items: center;
  flex-grow: 1;
  align-items: center;
  flex-basis: 100%;
}

.nav-dropdown .link {
  padding: 0.667em 1.667em !important;
  margin: 0 !important;
}

.justify-content-center {
  -webkit-justify-content: center;
  justify-content: center;
}

.card-wrapper {
  -webkit-flex: 1;
  flex: 1;
}

.card-deck {
  display: grid !important;
  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
  grid-gap: .5rem;
}

